# Production-RAG

./: .gitignore  README.md  pyproject.toml
src/rag/: main.py  schemas.py
src/rag/loaders/: data_loader.py
src/rag/services/: ingestion.py  llm_service.py  retrival.py
src/rag/storage/: data_base.py
